--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>TaskManager</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:image" content="assets/demo-pic.PNG" />
+  <meta property="og:image" content="src\assets\demo-pic.PNG" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
