--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,11 @@
   <title>TaskManager</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:image" content="/src/assets/demo-pic.PNG"/>
+  <meta property="og:image" content="https://lh3.googleusercontent.com/d/12M-TflCz3gU-5gkqXrggna7pM26PoVn0=s220?authuser=0"/>
   <meta property="og:title" content="TaskManager"/>
   <meta property="og:type" content="website"/>
-  <meta property="og:url" content="http://delunico-taskmanager.herokuapp.com/" />
+  <meta property="og:url" content="http://delunico-taskmanager.herokuapp.com/"/>
+  <meta property="og:description" content="Manage your tasks efficiently with this CRUD angular app demo"/>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
