updated og:image link

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>TaskManager</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:image" content="https://lh3.googleusercontent.com/d/12M-TflCz3gU-5gkqXrggna7pM26PoVn0=s220?authuser=0"/>
+  <meta property="og:image" content="https://lh3.googleusercontent.com/d/1Pa0s3Mi5VrMzzFFEjhGnZKTZ8pzohb0l"/>
   <meta property="og:title" content="TaskManager"/>
   <meta property="og:type" content="website"/>
   <meta property="og:url" content="http://delunico-taskmanager.herokuapp.com/"/>
